--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -15,8 +15,10 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "lucide-react": "^0.507.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0",
