--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -14,10 +14,12 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.507.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5",
