--- a/ar-backend/package.json
+++ b/ar-backend/package.json
@@ -10,16 +10,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@azure/storage-blob": "^12.27.0",
     "bcryptjs": "^3.0.2",
+    "canvas": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "gl": "^8.1.6",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "node-fetch": "^3.3.2",
+    "three": "^0.177.0"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.7",
+    "@types/three": "^0.176.0"
   }
 }
