--- a/ar-backend/package.json
+++ b/ar-backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
+    "puppeteer": "^24.9.0",
     "three": "^0.177.0"
   },
   "devDependencies": {
