--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "fflate": "^0.8.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.507.0",
     "qrcode.react": "^4.2.0",
