--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/xr": "^6.6.17",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
