--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.6.0",
+    "recharts": "^3.1.2",
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0",
     "three-stdlib": "^2.36.0",
