--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -32,7 +32,8 @@
     "tailwindcss": "^4.1.5",
     "three": "^0.176.0",
     "three-stdlib": "^2.36.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "web-ifc": "^0.0.71"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
