--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@react-three/xr": "^6.6.17",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
@@ -21,6 +22,7 @@
     "jszip": "^3.10.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.507.0",
+    "postprocessing": "^6.38.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
