--- a/ar-backend/package.json
+++ b/ar-backend/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "canvas": "^3.1.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "gl": "^8.1.6",
