--- a/.github/workflows/main_fusionxr-backend.yml
+++ b/.github/workflows/main_fusionxr-backend.yml
@@ -62,6 +62,7 @@ jobs:
         with:
           app-name: 'fusionxr-backend'
           slot-name: 'Production'
-          package: .
+          package: ./backend
 
           
+
