--- a/.github/workflows/main_fusionxr-backend.yml
+++ b/.github/workflows/main_fusionxr-backend.yml
@@ -24,7 +24,7 @@ jobs:
           node-version: '22.x'
 
       - name: npm install, build, and test
-        working-directory: ./backend
+        working-directory: ar-backend
         run: |
           npm install
           npm run build --if-present
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: ar-backend
 
   deploy:
     runs-on: ubuntu-latest
@@ -62,7 +62,8 @@ jobs:
         with:
           app-name: 'fusionxr-backend'
           slot-name: 'Production'
-          package: ./backend
+          package: .
 
           
+
 
