--- a/holoxr-frontend/.env.production
+++ b/holoxr-frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_URL=fusionxr-backend-e6e8cgbyh8ghg6fv.malaysiawest-01.azurewebsites.net
+VITE_API_URL=https://fusionxr-backend-e6e8cgbyh8ghg6fv.malaysiawest-01.azurewebsites.net/
