--- a/holoxr-frontend/package.json
+++ b/holoxr-frontend/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@react-three/xr": "^6.6.17",
+    "@tabler/icons-react": "^3.37.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
